# Octopus

./: CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/include/octopus/: Task.hpp  TaskParser.hpp
src/include/octopus/exceptions/: InvalidTaskDefinitionException.hpp
src/schemas/: task_schema.json
src/src/: TaskParser.cpp
